GNOME Bugzilla – Bug 701139
Terminate the unoconv process when cancelling preview
Last modified: 2013-05-29 15:46:32 UTC
Unoconv can take a while to convert huge office files, and as long as the process is alive LibreOffice can't be started. Steps to reproduce: - Create a massive spreadsheet using Calc -- fill in A1 and A1048576. - Click to preview it in Documents. - Press the '<' button to cancel the preview while the spinner is on. - Run 'ps aux | grep unoconv'. - Try to run Calc.
Created attachment 245544 [details] [review] pdf-loader: Terminate the unoconv process when loading is cancelled
Created attachment 245549 [details] [review] pdf-loader: Terminate the unoconv process when loading is cancelled Remove leftover debug message.
Review of attachment 245549 [details] [review]: Looks good to me, thanks.
Comment on attachment 245549 [details] [review] pdf-loader: Terminate the unoconv process when loading is cancelled Thanks for the review.