pdf-loader: Terminate the unoconv process when loading is cancelled

https://bugzilla.gnome.org/show_bug.cgi?id=701139